@@ -44,6 +44,10 @@ public:
     bool isUtf8Tail(uint8_t b);
     ucs4char in(BinaryInputPort* port);
     ucs4string readWholeString(BinaryInputPort* port);
+    ucs4string getCodecName() const
+    {
+        return UC("utf-8-codec");
+    }
 };
 
 }; // namespace scheme
